[package]
name = "bevy_rblx"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"
authors = ["Radiant"]
description = "Running Roblox games inside Bevy Game Engine"
license = "LICENSE"

[dependencies]
bevy = "^0.18"
bevy-async-commands = "0.3.1"
bevy-async-ecs = "0.10.0"
bevy-inspector-egui = "^0.36"
bevy_rblx_derive = { version = "0.1.0", path = "crates/bevy_rblx_derive" }
clap = { version = "^4.6", features = ["cargo"] }
concat-idents = "^1.1"
dialoguer = { version = "0.12.0", features = ["completion", "history"] }
inventory = "^0.3"
lazy_static = "^1.5"
mlua = { version = "^0.11", features = ["async", "luau", "luau-jit", "mlua_derive", "vendored", "send", "macros"] }
parking_lot = "^0.12"
ptree = "^0.5"
rbx_binary = "2.0.1"
static_assertions = { version = "^1.1", features = ["nightly"] }

[workspace]
members = ["crates/bevy_rblx_derive"]

[features]
deprecated = []
multiplayer = []
