[package]
name = "bevy_rblx"
version = "0.1.2"
edition = "2024"
build = "src/build.rs"
authors = ["Radiant"]
description = "Running Roblox games inside Bevy Game Engine"
license-file = "LICENSE"
repository = "https://github.com/radiantgurl/bevy_rblx.git"

[dependencies]
bevy = "^0.18"
bevy-async-commands = "^0.3"
bevy-async-ecs = "^0.10"
bevy-inspector-egui = "^0.36"
bevy_egui = "^0.39"
bevy_rblx_derive = { version = "0.1.1", path = "crates/bevy_rblx_derive" }
chrono = "0.4.44"
clap = { version = "^4.6", features = ["cargo"] }
concat-idents = "^1.1"
inventory = "^0.3"
lazy_static = "^1.5"
mlua = { version = "^0.11", features = ["async", "luau", "luau-jit", "mlua_derive", "vendored", "send", "macros"] }
parking_lot = "^0.12"
ptree = "^0.5"
rbx_binary = "^2.0"
static_assertions = { version = "^1.1", features = ["nightly"] }
arboard = { version = "^3.x", features = ["wl-clipboard-rs", "wayland-data-control"]}

[workspace]
members = ["crates/bevy_rblx_derive"]

[features]
deprecated = []
multiplayer = []

[profile.release]
opt-level = 3
lto = true
debug = 1
split-debuginfo = "packed"

[profile.test-release]
inherits = "release"
lto=false
debug = 2
split-debuginfo = "off"
