[package]
name = "bevy_rblx_derive"
version = "0.1.1"
edition = "2024"
authors = ["Radiant"]
description = "Bevy Rblx derive macros for the class system"
license = "Apache-2.0"

[lib]
proc-macro=true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
convert_case = "0.11.0"
syn = { version = "2.0.96", features = ["full", "visit"] }
concat-idents = "1.1.5"
